// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`App / renders aa logged in properly 1`] = `
<div>
  <div
    class="Toastify"
  />
  <div
    class="sc-cmTdod ftrAGQ"
  >
    <div
      class="bp3-navbar sc-EHOje gMcVig"
    >
      <div
        class="sc-bxivhb sc-bZQynM ftKVqf"
      >
        <div
          class="bp3-navbar-group bp3-align-left"
        >
          <div
            class="bp3-navbar-heading"
          >
            <a
              href="/"
            >
              <img
                alt="Arlo, by VotingWorks"
                src="/arlo.png"
              />
            </a>
          </div>
        </div>
        <div
          class="bp3-navbar-group bp3-align-right"
        >
          <div
            class="sc-ifAKCX jNLPyG"
            id="reset-button-wrapper"
          />
          <button
            class="bp3-button bp3-small sc-bwzfXH eBfcXh"
            type="button"
          >
            <span
              class="bp3-button-text"
            >
              Log out
            </span>
          </button>
        </div>
      </div>
    </div>
    <div
      class="sc-fYxtnH dERvaX"
    >
      <img
        alt="Arlo, by VotingWorks"
        height="50px"
        src="/arlo.png"
      />
      <div
        class="sc-VigVT jXYKmK"
      >
        <label
          for="audit-name"
          id="audit-name-label"
        >
          Give your new audit a unique name.
          <div
            class="sc-hEsumM gTKYRS sc-cSHVUG gyNSie"
          >
            <div
              class="bp3-input-group sc-kAzzGY fpNxNJ"
            >
              <input
                aria-labelledby="audit-name-label"
                class="bp3-input"
                id="audit-name"
                name="auditName"
                style="padding-right: 10px;"
                value=""
              />
            </div>
          </div>
        </label>
      </div>
      <div
        class="sc-VigVT jXYKmK"
      >
        <label
          for="auditType"
        >
          Audit type:
          <div
            class="sc-ktHwxA TQvED"
          >
            <label
              class="bp3-control bp3-radio"
            >
              <input
                checked=""
                name="auditType"
                type="radio"
                value="BALLOT_POLLING"
              />
              <span
                class="bp3-control-indicator"
              />
              Ballot Polling
            </label>
            <label
              class="bp3-control bp3-radio"
            >
              <input
                name="auditType"
                type="radio"
                value="BATCH_COMPARISON"
              />
              <span
                class="bp3-control-indicator"
              />
              Batch Comparison
            </label>
          </div>
        </label>
      </div>
      <button
        class="bp3-button bp3-fill bp3-large bp3-intent-primary sc-jnlKLf fdPTCc sc-bwzfXH eBfcXh"
        type="button"
      >
        <span
          class="bp3-button-text"
        >
          Create a New Audit
        </span>
      </button>
    </div>
  </div>
</div>
`;

exports[`App / renders ja logged in properly 1`] = `
<div>
  <div
    class="Toastify"
  />
  <div
    class="sc-iELTvK dOFDOj"
  >
    <div
      class="bp3-navbar sc-EHOje kGnsSl"
    >
      <div
        class="sc-bxivhb sc-bZQynM ftKVqf"
      >
        <div
          class="bp3-navbar-group bp3-align-left"
        >
          <div
            class="bp3-navbar-heading"
          >
            <a
              href="/"
            >
              <img
                alt="Arlo, by VotingWorks"
                src="/arlo.png"
              />
            </a>
          </div>
        </div>
        <div
          class="bp3-navbar-group bp3-align-right"
        >
          <div
            class="sc-ifAKCX jNLPyG"
            id="reset-button-wrapper"
          />
          <button
            class="bp3-button bp3-small sc-bwzfXH eBfcXh"
            type="button"
          >
            <span
              class="bp3-button-text"
            >
              Log out
            </span>
          </button>
        </div>
      </div>
    </div>
    <div
      class="sc-fYxtnH dERvaX"
    >
      <img
        alt="Arlo, by VotingWorks"
        height="50px"
        src="/arlo.png"
      />
    </div>
  </div>
</div>
`;

exports[`App / renders unauthenticated properly 1`] = `
<div>
  <div
    class="Toastify"
  />
  <div
    class="sc-iELTvK dOFDOj"
  >
    <div
      class="bp3-navbar sc-EHOje kGnsSl"
    >
      <div
        class="sc-bxivhb sc-bZQynM ftKVqf"
      >
        <div
          class="bp3-navbar-group bp3-align-left"
        >
          <div
            class="bp3-navbar-heading"
          >
            <a
              href="/"
            >
              <img
                alt="Arlo, by VotingWorks"
                src="/arlo.png"
              />
            </a>
          </div>
        </div>
        <div
          class="bp3-navbar-group bp3-align-right"
        >
          <div
            class="sc-ifAKCX jNLPyG"
            id="reset-button-wrapper"
          />
        </div>
      </div>
    </div>
    <div
      class="sc-fYxtnH dERvaX"
    >
      <img
        alt="Arlo, by VotingWorks"
        height="50px"
        src="/arlo.png"
      />
      <button
        class="bp3-button bp3-fill bp3-large bp3-intent-primary sc-jnlKLf fdPTCc sc-bdVaJa gLVjYw"
        type="button"
      >
        <span
          class="bp3-button-text"
        >
          Log in as an Audit Admin
        </span>
      </button>
      <button
        class="bp3-button bp3-fill bp3-large bp3-intent-primary sc-jnlKLf fdPTCc sc-bdVaJa gLVjYw"
        type="button"
      >
        <span
          class="bp3-button-text"
        >
          Log in as a Jurisdiction Admin
        </span>
      </button>
    </div>
  </div>
</div>
`;

exports[`App /election/:electionId/audit-board/:auditBoardId renders aa logged in properly 1`] = `
<div>
  <div
    class="Toastify"
  />
  <div
    class="sc-iELTvK dOFDOj"
  >
    <div
      class="bp3-navbar sc-EHOje kGnsSl"
    >
      <div
        class="sc-bxivhb sc-bZQynM ftKVqf"
      >
        <div
          class="bp3-navbar-group bp3-align-left"
        >
          <div
            class="bp3-navbar-heading"
          >
            <a
              href="/"
            >
              <img
                alt="Arlo, by VotingWorks"
                src="/arlo.png"
              />
            </a>
          </div>
        </div>
        <div
          class="bp3-navbar-group bp3-align-right"
        >
          <div
            class="sc-ifAKCX jNLPyG"
            id="reset-button-wrapper"
          />
          <button
            class="bp3-button bp3-small sc-bwzfXH eBfcXh"
            type="button"
          >
            <span
              class="bp3-button-text"
            >
              Log out
            </span>
          </button>
        </div>
      </div>
    </div>
    <div
      class="sc-fYxtnH dERvaX"
    >
      <img
        alt="Arlo, by VotingWorks"
        height="50px"
        src="/arlo.png"
      />
      <div
        class="sc-VigVT jXYKmK"
      >
        <label
          for="audit-name"
          id="audit-name-label"
        >
          Give your new audit a unique name.
          <div
            class="sc-hEsumM gTKYRS sc-cSHVUG gyNSie"
          >
            <div
              class="bp3-input-group sc-kAzzGY fpNxNJ"
            >
              <input
                aria-labelledby="audit-name-label"
                class="bp3-input"
                id="audit-name"
                name="auditName"
                style="padding-right: 10px;"
                value=""
              />
            </div>
          </div>
        </label>
      </div>
      <div
        class="sc-VigVT jXYKmK"
      >
        <label
          for="auditType"
        >
          Audit type:
          <div
            class="sc-ktHwxA TQvED"
          >
            <label
              class="bp3-control bp3-radio"
            >
              <input
                checked=""
                name="auditType"
                type="radio"
                value="BALLOT_POLLING"
              />
              <span
                class="bp3-control-indicator"
              />
              Ballot Polling
            </label>
            <label
              class="bp3-control bp3-radio"
            >
              <input
                name="auditType"
                type="radio"
                value="BATCH_COMPARISON"
              />
              <span
                class="bp3-control-indicator"
              />
              Batch Comparison
            </label>
          </div>
        </label>
      </div>
      <button
        class="bp3-button bp3-fill bp3-large bp3-intent-primary sc-jnlKLf fdPTCc sc-bwzfXH eBfcXh"
        type="button"
      >
        <span
          class="bp3-button-text"
        >
          Create a New Audit
        </span>
      </button>
    </div>
  </div>
</div>
`;

exports[`App /election/:electionId/audit-board/:auditBoardId renders ab logged in properly 1`] = `<div />`;

exports[`App /election/:electionId/audit-board/:auditBoardId renders ja logged in properly 1`] = `
<div>
  <div
    class="Toastify"
  />
  <div
    class="sc-iELTvK dOFDOj"
  >
    <div
      class="bp3-navbar sc-EHOje kGnsSl"
    >
      <div
        class="sc-bxivhb sc-bZQynM ftKVqf"
      >
        <div
          class="bp3-navbar-group bp3-align-left"
        >
          <div
            class="bp3-navbar-heading"
          >
            <a
              href="/"
            >
              <img
                alt="Arlo, by VotingWorks"
                src="/arlo.png"
              />
            </a>
          </div>
        </div>
        <div
          class="bp3-navbar-group bp3-align-right"
        >
          <div
            class="sc-ifAKCX jNLPyG"
            id="reset-button-wrapper"
          />
          <button
            class="bp3-button bp3-small sc-bwzfXH eBfcXh"
            type="button"
          >
            <span
              class="bp3-button-text"
            >
              Log out
            </span>
          </button>
        </div>
      </div>
    </div>
    <div
      class="sc-fYxtnH dERvaX"
    >
      <img
        alt="Arlo, by VotingWorks"
        height="50px"
        src="/arlo.png"
      />
    </div>
  </div>
</div>
`;

exports[`App /election/:electionId/audit-board/:auditBoardId renders unauthenticated properly 1`] = `
<div>
  <div
    class="Toastify"
  />
  <div
    class="sc-iELTvK dOFDOj"
  >
    <div
      class="bp3-navbar sc-EHOje kGnsSl"
    >
      <div
        class="sc-bxivhb sc-bZQynM ftKVqf"
      >
        <div
          class="bp3-navbar-group bp3-align-left"
        >
          <div
            class="bp3-navbar-heading"
          >
            <a
              href="/"
            >
              <img
                alt="Arlo, by VotingWorks"
                src="/arlo.png"
              />
            </a>
          </div>
        </div>
        <div
          class="bp3-navbar-group bp3-align-right"
        >
          <div
            class="sc-ifAKCX jNLPyG"
            id="reset-button-wrapper"
          />
        </div>
      </div>
    </div>
    <div
      class="sc-fYxtnH dERvaX"
    >
      <img
        alt="Arlo, by VotingWorks"
        height="50px"
        src="/arlo.png"
      />
      <button
        class="bp3-button bp3-fill bp3-large bp3-intent-primary sc-jnlKLf fdPTCc sc-bdVaJa gLVjYw"
        type="button"
      >
        <span
          class="bp3-button-text"
        >
          Log in as an Audit Admin
        </span>
      </button>
      <button
        class="bp3-button bp3-fill bp3-large bp3-intent-primary sc-jnlKLf fdPTCc sc-bdVaJa gLVjYw"
        type="button"
      >
        <span
          class="bp3-button-text"
        >
          Log in as a Jurisdiction Admin
        </span>
      </button>
    </div>
  </div>
</div>
`;

exports[`App /election/:electionId/jurisdiction/:jurisdictionId renders aa logged in properly 1`] = `
<div>
  <div
    class="Toastify"
  />
  <div
    class="sc-iELTvK dOFDOj"
  >
    <div
      class="bp3-navbar sc-EHOje kGnsSl"
    >
      <div
        class="sc-bxivhb sc-bZQynM ftKVqf"
      >
        <div
          class="bp3-navbar-group bp3-align-left"
        >
          <div
            class="bp3-navbar-heading"
          >
            <a
              href="/"
            >
              <img
                alt="Arlo, by VotingWorks"
                src="/arlo.png"
              />
            </a>
          </div>
        </div>
        <div
          class="bp3-navbar-group bp3-align-right"
        >
          <div
            class="sc-ifAKCX jNLPyG"
            id="reset-button-wrapper"
          />
          <button
            class="bp3-button bp3-small sc-bwzfXH eBfcXh"
            type="button"
          >
            <span
              class="bp3-button-text"
            >
              Log out
            </span>
          </button>
        </div>
      </div>
    </div>
    <div
      class="sc-fYxtnH dERvaX"
    >
      <img
        alt="Arlo, by VotingWorks"
        height="50px"
        src="/arlo.png"
      />
      <div
        class="sc-VigVT jXYKmK"
      >
        <label
          for="audit-name"
          id="audit-name-label"
        >
          Give your new audit a unique name.
          <div
            class="sc-hEsumM gTKYRS sc-cSHVUG gyNSie"
          >
            <div
              class="bp3-input-group sc-kAzzGY fpNxNJ"
            >
              <input
                aria-labelledby="audit-name-label"
                class="bp3-input"
                id="audit-name"
                name="auditName"
                style="padding-right: 10px;"
                value=""
              />
            </div>
          </div>
        </label>
      </div>
      <div
        class="sc-VigVT jXYKmK"
      >
        <label
          for="auditType"
        >
          Audit type:
          <div
            class="sc-ktHwxA TQvED"
          >
            <label
              class="bp3-control bp3-radio"
            >
              <input
                checked=""
                name="auditType"
                type="radio"
                value="BALLOT_POLLING"
              />
              <span
                class="bp3-control-indicator"
              />
              Ballot Polling
            </label>
            <label
              class="bp3-control bp3-radio"
            >
              <input
                name="auditType"
                type="radio"
                value="BATCH_COMPARISON"
              />
              <span
                class="bp3-control-indicator"
              />
              Batch Comparison
            </label>
          </div>
        </label>
      </div>
      <button
        class="bp3-button bp3-fill bp3-large bp3-intent-primary sc-jnlKLf fdPTCc sc-bwzfXH eBfcXh"
        type="button"
      >
        <span
          class="bp3-button-text"
        >
          Create a New Audit
        </span>
      </button>
    </div>
  </div>
</div>
`;

exports[`App /election/:electionId/jurisdiction/:jurisdictionId renders ja logged in properly 1`] = `
<div>
  <div
    class="Toastify"
  />
  <div
    class="sc-iELTvK dOFDOj"
  >
    <div
      class="bp3-navbar sc-EHOje kGnsSl"
    >
      <div
        class="sc-bxivhb sc-bZQynM ftKVqf"
      >
        <div
          class="bp3-navbar-group bp3-align-left"
        >
          <div
            class="bp3-navbar-heading"
          >
            <a
              href="/"
            >
              <img
                alt="Arlo, by VotingWorks"
                src="/arlo.png"
              />
            </a>
          </div>
        </div>
        <div
          class="bp3-navbar-group bp3-align-right"
        >
          <div
            class="sc-ifAKCX jNLPyG"
            id="reset-button-wrapper"
          />
          <button
            class="bp3-button bp3-small sc-bwzfXH eBfcXh"
            type="button"
          >
            <span
              class="bp3-button-text"
            >
              Log out
            </span>
          </button>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`App /election/:electionId/jurisdiction/:jurisdictionId renders unauthenticated properly 1`] = `
<div>
  <div
    class="Toastify"
  />
  <div
    class="sc-iELTvK dOFDOj"
  >
    <div
      class="bp3-navbar sc-EHOje kGnsSl"
    >
      <div
        class="sc-bxivhb sc-bZQynM ftKVqf"
      >
        <div
          class="bp3-navbar-group bp3-align-left"
        >
          <div
            class="bp3-navbar-heading"
          >
            <a
              href="/"
            >
              <img
                alt="Arlo, by VotingWorks"
                src="/arlo.png"
              />
            </a>
          </div>
        </div>
        <div
          class="bp3-navbar-group bp3-align-right"
        >
          <div
            class="sc-ifAKCX jNLPyG"
            id="reset-button-wrapper"
          />
        </div>
      </div>
    </div>
    <div
      class="sc-fYxtnH dERvaX"
    >
      <img
        alt="Arlo, by VotingWorks"
        height="50px"
        src="/arlo.png"
      />
      <button
        class="bp3-button bp3-fill bp3-large bp3-intent-primary sc-jnlKLf fdPTCc sc-bdVaJa gLVjYw"
        type="button"
      >
        <span
          class="bp3-button-text"
        >
          Log in as an Audit Admin
        </span>
      </button>
      <button
        class="bp3-button bp3-fill bp3-large bp3-intent-primary sc-jnlKLf fdPTCc sc-bdVaJa gLVjYw"
        type="button"
      >
        <span
          class="bp3-button-text"
        >
          Log in as a Jurisdiction Admin
        </span>
      </button>
    </div>
  </div>
</div>
`;
